--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -27,6 +27,7 @@ $bgModal: rgba(6, 13, 30, 0.5);
 body {
   background: #f6f5f7;
   font-family: "Hind Madurai", sans-serif;
+  overflow-x: hidden;
 
   div.bloc-modale {
     position: fixed;
@@ -45,7 +46,6 @@ h1.h1-dashboard {
   text-align: inherit;
   color: $main-blue;
   margin-bottom: 6px;
-  padding-left: 10px;
 
   &::first-letter {
     text-transform: uppercase;
@@ -62,7 +62,7 @@ h2.h2-dashboard {
   font-size: 14px;
   text-align: inherit;
   color: $main-blue;
-  margin-bottom: 6px;f
+  margin-bottom: 6px;
 
   @media screen and (min-width: 950px) {
     font-size: 20px;
@@ -229,6 +229,7 @@ header#side-bar-log {
     display: block;
   }
   #sidebar-wrapper {
+    z-index: 9999;
     height: 100vh;
     position: fixed;
     top: 0;
@@ -712,8 +713,9 @@ section#loan-register {
           flex-wrap: wrap;
           justify-content: space-between;
           align-items: center;
-          width: 90%;
+          width: 100%;
           min-height: 120px;
+
           li {
             width: 150px;
             text-align: center;
@@ -735,7 +737,7 @@ section#loan-register {
             font-size: 18px;
             font-weight: bold;
             font-family: "Nova Slim", cursive, sans-serif;
-            width: 400px;
+            width: 100%;
           }
 
           li.btn-option-crud {
@@ -1197,79 +1199,116 @@ div#confirmed-error {
     top: 0;
     width: 100%;
     background-color: $white; /* couleur de fond pour la div */
-    z-index: 30;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+    z-index: 3;
     border-bottom: 1px solid gray;
 
     div.search-crud-input {
       form {
+        position: relative;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 5px;
 
-        input.input-search {
-          width: 100%;
-          height: 40px;
-          padding-left: 10px;
-          border-radius: 8px;
-          margin: 20px auto;
+        @media screen and (min-width: 1200px) {
+          flex-direction: row;
+          align-items: baseline;
         }
 
-        input.btn-search {
-          display: block;
+        p.title-sticky-crud {
+          text-align: center;
           width: 100%;
-          max-width: 200px;
-          height: 40px;
-          border-radius: 8px;
-          background-color: $main-blue;
-          border: $main-blue;
-          color: $white;
           font-weight: bold;
+          color: $btn-red;
+          margin-bottom: 10px;
 
-          @media screen and (min-width: 950px) {
-            width: 100px;
-          }
-
-          &:hover {
-            cursor: pointer;
-            background-color: $btn-main-blue-over;
+          @media screen and (min-width: 1200px) {
+            width: 20%;
           }
         }
 
-        a.btn-add {
+        div.group-search-standard {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          max-width: 400px;
+          margin-bottom: 20px;
+
+          @media screen and (min-width: 1200px) {
+            width: 60%;
+            max-width: 600px;
+          }
+
+          input.input-search {
+            width: 80%;
+            max-width: 500px;
+            height: 40px;
+            padding-left: 10px;
+            border-radius: 8px;
+
+            @media screen and (min-width: 1200px) {
+              width: 50%;
+            }
+          }
+
+          input.btn-search {
+            display: block;
+            width: 20%;
+            max-width: 200px;
+            height: 40px;
+            border-radius: 8px;
+            background-color: $main-blue;
+            border: $main-blue;
+            color: $white;
+            font-weight: bold;
+
+            &:hover {
+              cursor: pointer;
+              background-color: $btn-main-blue-over;
+            }
+          }
+        }
+
+        div.group-tool-standard {
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 40px;
-          height: 40px;
-          border-radius: 8px;
-          background-color: $main-blue;
-          border: $main-blue;
-          color: $white;
+          width: 20%;
 
-          &:hover {
-            cursor: pointer;
-            background-color: $btn-main-blue-over;
+          a.btn-add {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px 15px;
+            border-radius: 8px;
+            background-color: $main-blue;
+            border: $main-blue;
+            color: $white;
+
+            &:hover {
+              cursor: pointer;
+              background-color: $btn-main-blue-over;
+            }
           }
-        }
-      }
 
-      button#btn-all-detail {
-        display: block;
-        border: none;
-        background-color: transparent;
-        color: $main-blue;
-        font-weight: bold;
-        padding: 20px 10px;
+          button#btn-all-detail {
+            display: block;
+            border: none;
+            background-color: transparent;
+            color: $main-blue;
+            font-weight: bold;
+            margin-right: 15px;
 
-        &:hover {
-          cursor: pointer;
-          color: $btn-main-blue-over;
-          text-decoration: underline;
+            &:hover {
+              cursor: pointer;
+              color: $btn-main-blue-over;
+              text-decoration: underline;
+            }
+          }
         }
       }
     }
