--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -662,9 +662,10 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
   align-items: center;
   width: 100%;
   min-height: 120px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
-  width: 150px;
   text-align: center;
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud {
@@ -686,7 +687,8 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
   position: absolute;
-  right: -80px;
+  top: 2px;
+  right: 10px;
   font-size: 30px;
   padding: 2px 8px;
   width: 30px;
@@ -774,10 +776,21 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud h3 {
   margin-bottom: 15px;
   color: #0868ae;
+  text-align: center;
+}
+@media screen and (min-width: 1250px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud h3 {
+    text-align: inherit;
+  }
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left {
-  width: 40%;
+  width: 100%;
   color: #0868ae;
+}
+@media screen and (min-width: 1250px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left {
+    width: 40%;
+  }
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li {
   display: flex;
@@ -814,7 +827,12 @@ section#loan-register div#container-list-book-crud ul.list-book-crud li.item-boo
   }
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right {
-  width: 40%;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right {
+    width: 40%;
+  }
 }
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-right ul.all-info-book li {
   display: flex;
@@ -858,7 +876,7 @@ section#loan-register form#form-loan-register .label-form-add-book {
   font-weight: bold;
 }
 section#loan-register form#form-loan-register .input-form-add-book {
-  width: 600px;
+  width: 100%;
   height: 44px;
   font-size: 20px;
   border-radius: 8px;
@@ -897,7 +915,6 @@ section#loan-register form#form-loan-register div#group-btn-loan-register-commun
   display: flex;
   justify-content: center;
   margin-top: 40px;
-  margin-right: 111px;
 }
 section#loan-register form#form-loan-register div#group-btn-loan-register-commun #btn-reset-form-loan-register {
   width: 160px;
@@ -938,7 +955,7 @@ section#loan-register form#form-in-loan-register .label-form-add-book {
   font-weight: bold;
 }
 section#loan-register form#form-in-loan-register .input-form-add-book {
-  width: 600px;
+  width: 100%;
   height: 44px;
   font-size: 20px;
   border-radius: 8px;
@@ -962,7 +979,6 @@ section#loan-register form#form-in-loan-register div#group-btn-in-loan-register-
   display: flex;
   justify-content: center;
   margin-top: 40px;
-  margin-right: 111px;
 }
 section#loan-register form#form-in-loan-register div#group-btn-in-loan-register-commun #btn-reset-form-in-loan-register {
   width: 160px;
@@ -1158,9 +1174,8 @@ div#confirmed-error:hover {
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form div.group-tool-standard {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  width: 20%;
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form div.group-tool-standard a.btn-add {
   display: flex;
@@ -1395,6 +1410,12 @@ div#confirmed-error:hover {
   padding: 6px 20px;
   border-radius: 8px;
 }
+.container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(odd) {
+  background-color: #fafafa; /* couleur pour les éléments impairs */
+}
+.container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(even) {
+  background-color: #f0f7ff; /* couleur pour les éléments impairs */
+}
 @media screen and (min-width: 500px) {
   .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
     width: 100%;
@@ -1403,12 +1424,6 @@ div#confirmed-error:hover {
     font-size: 18px;
     flex-direction: row;
     justify-content: space-between;
-  }
-  .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(odd) {
-    background-color: #fafafa; /* couleur pour les éléments impairs */
-  }
-  .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(even) {
-    background-color: #f0f7ff; /* couleur pour les éléments impairs */
   }
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
