--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -747,9 +747,10 @@ section#loan-register {
           align-items: center;
           width: 100%;
           min-height: 120px;
+          padding-top: 20px;
+          padding-bottom: 20px;
 
           li {
-            width: 150px;
             text-align: center;
 
             img.pict-book-crud {
@@ -763,6 +764,7 @@ section#loan-register {
               }
             }
           }
+
           li.item-title-crud {
             position: relative;
             color: $main-blue;
@@ -774,7 +776,8 @@ section#loan-register {
 
           li.btn-option-crud {
             position: absolute;
-            right: -80px;
+            top: 2px;
+            right: 10px;
             font-size: 30px;
             padding: 2px 8px;
             width: 30px;
@@ -873,11 +876,21 @@ section#loan-register {
               h3 {
                 margin-bottom: 15px;
                 color: $main-blue;
+                text-align: center;
+
+                @media screen and (min-width: 1250px) {
+                  text-align: inherit;
+                }
               }
 
               div.item-complete-left {
-                width: 40%;
+                width: 100%;
                 color: $main-blue;
+
+                @media screen and (min-width: 1250px) {
+                  width: 40%;
+                }
+                
 
                 ul.all-info-user {
                   li {
@@ -916,7 +929,13 @@ section#loan-register {
               }
 
               div.item-complete-right {
-                width: 40%;
+                width: 100%;
+
+                @media screen and (min-width: 1200px) {
+                  width: 40%;
+                }
+
+
                 ul.all-info-book {
                   li {
                     display: flex;
@@ -971,14 +990,20 @@ section#loan-register {
     }
 
     .input-form-add-book {
-      width: 600px;
+      width: 100%;
       height: 44px;
       font-size: 20px;
       border-radius: 8px;
       padding-left: 10px;
       border: 1px solid gray;
       margin-bottom: 30px;
+
+      @media screen and (min-width: 950px) {
+        // width: 600px;
+      }
     }
+
+
 
     div#form-loan-register-left {
       display: flex;
@@ -1017,7 +1042,6 @@ section#loan-register {
       display: flex;
       justify-content: center;
       margin-top: 40px;
-      margin-right: 111px;
 
       #btn-reset-form-loan-register {
         width: 160px;
@@ -1068,13 +1092,17 @@ section#loan-register {
     }
 
     .input-form-add-book {
-      width: 600px;
+      width: 100%;
       height: 44px;
       font-size: 20px;
       border-radius: 8px;
       padding-left: 10px;
       border: 1px solid gray;
       margin-bottom: 30px;
+
+      @media screen and (min-width: 950px) {
+        // width: 600px;
+      }
     }
 
     div#form-in-loan-register-left {
@@ -1097,7 +1125,6 @@ section#loan-register {
       display: flex;
       justify-content: center;
       margin-top: 40px;
-      margin-right: 111px;
 
       #btn-reset-form-in-loan-register {
         width: 160px;
@@ -1307,9 +1334,8 @@ div#confirmed-error {
 
         div.group-tool-standard {
           display: flex;
-          justify-content: center;
+          justify-content: space-around;
           align-items: center;
-          width: 20%;
 
           a.btn-add {
             display: flex;
@@ -1566,20 +1592,20 @@ div#confirmed-error {
                     padding: 6px 20px;
                     border-radius: 8px;
 
+                    &:nth-child(odd) {
+                      background-color: #fafafa; /* couleur pour les éléments impairs */
+                    }
+
+                    &:nth-child(even) {
+                      background-color: $bgc-dashboard; /* couleur pour les éléments impairs */
+                    }
+
                     @media screen and (min-width: 500px) {
                       width: 100%;
                       height: fit-content;
                       font-size: 18px;
                       flex-direction: row;
-                      justify-content: space-between;
-
-                      &:nth-child(odd) {
-                        background-color: #fafafa; /* couleur pour les éléments impairs */
-                      }
-
-                      &:nth-child(even) {
-                        background-color: $bgc-dashboard; /* couleur pour les éléments impairs */
-                      }
+                      justify-content: space-between;                     
                     }
 
                     span.bdd-var {
