--- a/css/style.scss
+++ b/css/style.scss
@@ -1695,13 +1695,14 @@ li:nth-child(4) {
   }
 
   div#iframe-google {
-    width: 90%;
+    width: fit-content;
     margin: 30px auto;
 
     iframe {
       width: 100%;
       max-width: 1200px;
       height: 450px;
+      margin: 0 auto;
     }
 
     #container-info-location {
