--- a/css/style.scss
+++ b/css/style.scss
@@ -398,6 +398,8 @@ p.sub-title-section {
                   color: $white;
                   margin-left: 2px;
                   float: left;
+                  padding-left: 10px;
+                  padding: 5px 0 5px 10px;
 
                   &:hover {
                     color: $btn-red;
