--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -646,6 +646,9 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   cursor: pointer;
 }
 
+section#loan-register {
+  padding: 30px 30px 0;
+}
 section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud {
   padding-top: 10px;
   padding-bottom: 5px;
@@ -1028,7 +1031,7 @@ p.info-succes-notif > strong {
 }
 
 section#dashboard-page-book-crud {
-  padding-top: 20px;
+  padding: 30px 30px 0px;
 }
 @media screen and (min-width: 950px) {
   section#dashboard-page-book-crud {
