--- a/css/style.css
+++ b/css/style.css
@@ -766,7 +766,6 @@ section#section-news .text-shadow {
   #section-heart ul.top {
     display: flex;
     flex-wrap: wrap;
-    padding-right: 25px;
   }
 }
 #section-heart ul.top li {
@@ -783,8 +782,7 @@ section#section-news .text-shadow {
 }
 @media screen and (min-width: 950px) {
   #section-heart ul.top li {
-    width: 25%;
-    padding: 0;
+    width: 33%;
     transition: all 0.5s ease;
   }
 }
@@ -842,7 +840,7 @@ li:nth-child(4) a {
 #btn-show-heart {
   display: block;
   width: 343px;
-  margin: 0 auto;
+  margin: 70px auto 0;
   text-align: center;
   padding: 12px 24px;
   font-style: normal;
