--- a/css/style.scss
+++ b/css/style.scss
@@ -840,7 +840,6 @@ section#section-news {
     @media screen and (min-width: 950px) {
       display: flex;
       flex-wrap: wrap;
-      padding-right: 25px;
     }
 
     li {
@@ -855,8 +854,7 @@ section#section-news {
       }
 
       @media screen and (min-width: 950px) {
-        width: 25%;
-        padding: 0;
+        width: 33%;
         transition: all 0.5s ease;
       }
 
@@ -937,7 +935,7 @@ li:nth-child(4) {
 #btn-show-heart {
   display: block;
   width: 343px;
-  margin: 0 auto;
+  margin: 70px auto 0;
   text-align: center;
   padding: 12px 24px;
   font-style: normal;
