--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ $grayForBlue: #fefeff;
 }
 
 .row-limit-size-full {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
 }
@@ -421,10 +421,15 @@ p.sub-title-section {
 // ---------- SECTION - MAIN HERO ----------
 
 section#section-main-hero {
-  min-height: 400px;
-  height: 100%;
   padding-top: 110px;
   padding-bottom: 40px;
+  background-color: $white;
+
+  @media screen and (min-width: 650px) {
+    min-height: 600px;
+    height: 100%;
+    max-height: 950px;
+  }
 
   @media screen and (min-width: 950px) {
     padding-top: 140px;
@@ -433,17 +438,57 @@ section#section-main-hero {
   div#container-section-main-hero {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 30px;
     padding-bottom: 50px;
+    margin: 0 auto;
 
     div#item-section-main-hero-left {
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      width: 100%;
+      width: 90%;
+      margin: 0 auto;
 
       @media screen and (min-width: 650px) {
+        width: 40%;
+      }
+
+      @media screen and (min-width: 950px) {
         width: 50%;
+      }
+
+      @media screen and (min-width: 1200px) {
+        margin-right: -100px;
+        margin-left: 100px;
+      }
+
+      @media screen and (min-width: 1400px) {
+        margin-right: -200px;
+        margin-left: 200px;
+      }
+
+      .animated-word {
+        transition: all 0.3s ease-in-out;
+        opacity: 1;
+      }
+
+      @keyframes smoke {
+        0% {
+          opacity: 0.1;
+          text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff,
+            0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de,
+            0 0 100px #ff00de, 0 0 150px #ff00de;
+        }
+        100% {
+          opacity: 1;
+          text-shadow: none;
+        }
+      }
+
+      .smoke-effect {
+        animation-name: smoke;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
       }
 
       h1#title-hero {
@@ -458,7 +503,7 @@ section#section-main-hero {
         }
 
         @media screen and (min-width: 1280px) {
-          font-size: 80px;
+          font-size: 100px;
         }
       }
 
@@ -475,13 +520,17 @@ section#section-main-hero {
         }
 
         @media screen and (min-width: 1280px) {
-          font-size: 30px;
+          font-size: 40px;
         }
       }
 
       div.picto-choise-profil {
         img.pict-hero-commun {
-          width: 90px;
+          width: 80px;
+
+          @media screen and (min-width: 950px) {
+            width: 120px;
+          }
 
           @media screen and (min-width: 950px) {
             width: 140px;
@@ -512,14 +561,16 @@ section#section-main-hero {
 
   div#item-section-main-hero-right {
     display: none;
-    text-align: center;
-
     img.pict-reader-hero {
       width: 300px;
       height: auto;
 
+      @media screen and (min-width: 950px) {
+        width: 450px;
+      }
+
       @media screen and (min-width: 1280px) {
-        width: 380px;
+        width: 680px;
       }
     }
 
@@ -908,8 +959,6 @@ section#section-news {
         left: -45px;
       }
 
-
-
       a {
         color: #ff6b38;
         position: relative;
@@ -990,8 +1039,6 @@ section#section-news {
       width: 343px;
       margin-top: -20px;
     }
-
-    
   }
 }
 
