--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .row-limit-size-full {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
 }
@@ -380,10 +380,16 @@ p.sub-title-section {
 }
 
 section#section-main-hero {
-  min-height: 400px;
-  height: 100%;
   padding-top: 110px;
   padding-bottom: 40px;
+  background-color: #fff;
+}
+@media screen and (min-width: 650px) {
+  section#section-main-hero {
+    min-height: 600px;
+    height: 100%;
+    max-height: 950px;
+  }
 }
 @media screen and (min-width: 950px) {
   section#section-main-hero {
@@ -393,19 +399,57 @@ section#section-main-hero {
 section#section-main-hero div#container-section-main-hero {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 30px;
   padding-bottom: 50px;
+  margin: 0 auto;
 }
 section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
 }
 @media screen and (min-width: 650px) {
   section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 950px) {
+  section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left {
     width: 50%;
   }
+}
+@media screen and (min-width: 1200px) {
+  section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left {
+    margin-right: -100px;
+    margin-left: 100px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left {
+    margin-right: -200px;
+    margin-left: 200px;
+  }
+}
+section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left .animated-word {
+  transition: all 0.3s ease-in-out;
+  opacity: 1;
+}
+@keyframes smoke {
+  0% {
+    opacity: 0.1;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+  }
+  100% {
+    opacity: 1;
+    text-shadow: none;
+  }
+}
+section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left .smoke-effect {
+  animation-name: smoke;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left h1#title-hero {
   font-size: 50px;
@@ -421,7 +465,7 @@ section#section-main-hero div#container-section-main-hero div#item-section-main-
 }
 @media screen and (min-width: 1280px) {
   section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left h1#title-hero {
-    font-size: 80px;
+    font-size: 100px;
   }
 }
 section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left p#sub-title-hero {
@@ -439,11 +483,16 @@ section#section-main-hero div#container-section-main-hero div#item-section-main-
 }
 @media screen and (min-width: 1280px) {
   section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left p#sub-title-hero {
-    font-size: 30px;
+    font-size: 40px;
   }
 }
 section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left div.picto-choise-profil img.pict-hero-commun {
-  width: 90px;
+  width: 80px;
+}
+@media screen and (min-width: 950px) {
+  section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left div.picto-choise-profil img.pict-hero-commun {
+    width: 120px;
+  }
 }
 @media screen and (min-width: 950px) {
   section#section-main-hero div#container-section-main-hero div#item-section-main-hero-left div.picto-choise-profil img.pict-hero-commun {
@@ -470,15 +519,19 @@ section#section-main-hero div#container-section-main-hero div#item-section-main-
 }
 section#section-main-hero div#item-section-main-hero-right {
   display: none;
-  text-align: center;
 }
 section#section-main-hero div#item-section-main-hero-right img.pict-reader-hero {
   width: 300px;
   height: auto;
 }
+@media screen and (min-width: 950px) {
+  section#section-main-hero div#item-section-main-hero-right img.pict-reader-hero {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 1280px) {
   section#section-main-hero div#item-section-main-hero-right img.pict-reader-hero {
-    width: 380px;
+    width: 680px;
   }
 }
 @media screen and (min-width: 650px) {
