--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ $grayForBlue: #fefeff;
 
 .row-limit-size-full {
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   margin: 0 auto;
 }
 
@@ -424,14 +424,15 @@ section#section-main-hero {
   padding-top: 110px;
   padding-bottom: 40px;
   background-color: $white;
+  height: 50%;
 
   @media screen and (min-width: 650px) {
-    min-height: 600px;
-    height: 100%;
+    min-height: 300px;
     max-height: 950px;
   }
 
   @media screen and (min-width: 950px) {
+    min-height: 600px;
     padding-top: 140px;
   }
 
